--- a/app/index/index.html
+++ b/app/index/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>vue测试</title>
 </head>
 <body>
     <div id="test"></div>
