--- a/app/index/index.html
+++ b/app/index/index.html
@@ -5,6 +5,13 @@
     <title>vue测试</title>
 </head>
 <body>
+    <!--<script src="jquery-3.1.0.js"></script>-->
+    <!--<script src="./static/js/underscore.js"></script>-->
+    <script type="text/template" id="input-box">
+        <input placeholder="input-box"/>
+    </script>
     <div id="test"></div>
+    <div id="temp"></div>
 </body>
+
 </html>
